--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"prepare": "husky"
 	},
 	"dependencies": {
+		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"next": "15.1.7",
 		"react": "^19.0.0",
