--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
 		"react-dom": "^19.0.0",
 		"tailwind-merge": "^3.0.1",
 		"tailwindcss-animate": "^1.0.7",
-		"yup": "^1.6.1"
+		"yup": "^1.6.1",
+		"zustand": "^5.0.3"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^1.9.4",
