--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
 		"prepare": "husky"
 	},
 	"dependencies": {
+		"@tanstack/react-query": "^5.66.9",
+		"@tanstack/react-query-devtools": "^5.66.9",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"formik": "^2.4.6",
