--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"formik": "^2.4.6",
+		"iron-session": "^8.0.4",
+		"jose": "^5.10.0",
 		"next": "15.1.7",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
