--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"formik": "^2.4.6",
+		"input-otp": "^1.4.2",
 		"iron-session": "^8.0.4",
 		"jose": "^5.10.0",
 		"next": "15.1.7",
